--- a/sass/styles.css
+++ b/sass/styles.css
@@ -17,22 +17,38 @@ html {
 
 body {
   color: #111111;
-  font: normal 16px/1.2 "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif; }
+  background-color: whitesmoke;
+  font: normal 16px/1.2 "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  padding: 2%; }
 
 h1 {
   color: #111111;
-  font-size: 32px;
-  font-weight: normal; }
+  font-size: 30px;
+  font-weight: normal;
+  margin: .2em 0; }
 
 h2 {
   color: #111111;
-  font-size: 22px;
-  font-weight: normal; }
+  font-size: 20px;
+  font-weight: normal;
+  margin: .2em 0; }
 
 h3 {
   color: #111111;
-  font-size: 18px;
-  font-weight: normal; }
+  font-size: 16px;
+  font-weight: normal;
+  margin: .2em 0; }
+
+.title {
+  font-size: 28px; }
+
+ul {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  padding-inline-start: 1.1em; }
+
+.small-text {
+  font-size: 80%; }
 
 /**
  * Utility classes
@@ -63,37 +79,208 @@ h3 {
 .text-right {
   text-align: right; }
 
+.section-title p {
+  margin-top: 0; }
+
 /**
  * Basic styles for links and buttons
  */
 a {
-  color: #f7d5a2;
+  color: #111111;
   text-decoration: none; }
   a:hover {
     color: #111111;
     text-decoration: underline; }
   a.button {
+    display: inline-block;
     padding: 1em 3em;
-    background-color: #f7d5a2;
-    zoom: 1;
-    transition: zoom .3s ease-in-out; }
+    color: whitesmoke;
+    background-color: #056288;
+    text-transform: uppercase;
+    transition: transform .2s ease-in-out; }
     a.button:hover {
-      zoom: 1.3; }
+      transform: scale(1.05);
+      text-decoration: none; }
     a.button.large {
       font-size: 28px;
-      font-weight: bold;
       padding: 1em 5em; }
+
+p {
+  line-height: 1.5em; }
+  p a {
+    color: #056288; }
+
+/**
+ * Toggle  styles
+ */
+.toggle {
+  color: whitesmoke;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border: 0;
+  font-size: 1.5em;
+  position: relative;
+  display: inline-block; }
+  .toggle span {
+    position: absolute;
+    transition: .3s;
+    background: whitesmoke;
+    border-radius: 2px; }
+    .toggle span:first-of-type {
+      top: 25%;
+      bottom: 25%;
+      left: 45%;
+      width: 10%; }
+    .toggle span:last-of-type {
+      top: 45%;
+      right: 25%;
+      left: 25%;
+      height: 10%; }
+
+.active .toggle span:first-of-type, .active .toggle span:last-of-type {
+  transform: rotate(90deg); }
+.active .toggle span:last-of-type {
+  left: 50%;
+  right: 50%; }
 
 /**
  * Header styles
  */
-#header .header-wrap .header-section {
-  -webkit-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto; }
+#header {
+  margin: 0; }
+  #header .header-wrap .header-section {
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto; }
 
 /**
  * Layout and section styles
  */
+section {
+  margin: 60px 0; }
+  section .section-title {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+
+/**
+ * Work section styles
+ */
+#work .job {
+  background-color: #323232;
+  color: whitesmoke;
+  padding: 24px;
+  margin: 20px 0;
+  cursor: pointer;
+  transition: background-color .3s ease; }
+  #work .job h1, #work .job h2, #work .job h3, #work .job li, #work .job a {
+    color: whitesmoke; }
+  #work .job .job-wrap {
+    position: relative; }
+    #work .job .job-wrap .main .title {
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto; }
+    #work .job .job-wrap .pts {
+      -webkit-transition: height .3s ease;
+      -o-transition: height .3s ease;
+      transition: height .3s ease;
+      overflow: hidden;
+      margin-left: 60px; }
+      #work .job .job-wrap .pts h3 {
+        padding-top: 1em;
+        text-transform: uppercase;
+        font-size: 80%; }
+  #work .job.active {
+    background-color: #056288; }
+  #work .job:not(.active) .pts {
+    display: none; }
+  #work .job:hover {
+    background-color: #056288; }
+
+#experience .section-title {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: flex-start;
+  align-items: flex-start; }
+#experience .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  grid-template-areas: ". . ." ". . ."; }
+  #experience .grid .experience {
+    background-color: #323232;
+    padding: 20px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: background-color .3s ease; }
+    #experience .grid .experience h1, #experience .grid .experience h2, #experience .grid .experience h3, #experience .grid .experience li, #experience .grid .experience a {
+      color: whitesmoke; }
+    #experience .grid .experience .main {
+      -webkit-align-items: flex-start;
+      -ms-flex-align: flex-start;
+      align-items: flex-start;
+      z-index: 10;
+      position: relative; }
+      #experience .grid .experience .main .toggle {
+        margin-right: 10px; }
+      #experience .grid .experience .main .title {
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto; }
+    #experience .grid .experience ul {
+      display: none;
+      -webkit-transition: height .3s ease;
+      -o-transition: height .3s ease;
+      transition: height .3s ease;
+      overflow: hidden;
+      margin: 0;
+      margin-left: 10px;
+      line-height: 1.6em; }
+    #experience .grid .experience.active {
+      background-color: #056288; }
+      #experience .grid .experience.active .main {
+        -webkit-align-items: flex-start;
+        -ms-flex-align: flex-start;
+        align-items: flex-start; }
+      #experience .grid .experience.active ul {
+        display: block; }
+    #experience .grid .experience:not(.active) .main:after {
+      content: "";
+      position: absolute;
+      left: -20px;
+      right: -20px;
+      top: calc(100% + 20px);
+      height: 100vh;
+      background-color: whitesmoke; }
+    #experience .grid .experience:not(.active) ul {
+      display: none; }
+
+#references .section-title {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: flex-start;
+  align-items: flex-start; }
 
 /*# sourceMappingURL=styles.css.map */
