Updated copy and responsive styles.

--- a/index.haml
+++ b/index.haml
@@ -14,7 +14,7 @@
   %head
     %meta{ charset: "utf-8"}
     %meta{ charset: "X-UA-Compatible", content: "IE=edge,chrome=1" }
-    %title
+    %title Nathan Pruzaniec - Technologist
     %meta{ name: "description", content: "" }
     %meta{ name: "viewport", content: "width=device-width" }
     %link{ href: "https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap", rel: "stylesheet"}
@@ -54,7 +54,7 @@
         %h1 About
         %a.button{ :href => 'mailto:nathan@pru.design', :target => '_blank' } Contact Me
       .about-copy
-        %p I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything. I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything. I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything.
+        %p Through my broad experiences in leadership, development, technology research, and media creation I have had the opportunity to lead in diverse areas of Creativity. I love to create, to bring talented people together, organize efforts, prioritize needs, build MVPs and grow them, and bring out the best in those around me. I love understanding things to their fullest so I can get the most out of everything and teach it to others. I value using standards, pre-built and open source tools, and collaborating with others to learn from their experiences. Finding the right combination of people, technology, and culture can accelerate any vision. Drop me an email, I would love to talk about what you're building.
     %section#work
       .section-title
         %h1 Work
@@ -89,7 +89,7 @@
               %span
               %span
             .title
-              %h2.job-title Lead Developer/Owner
+              %h2.job-title Owner
               %h3.job-company Pru & Drew Inc.
             .time
               %h3.job-dates 2014 - Present
