--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -217,6 +217,10 @@ p {
       @media screen and (max-width: map-get($breakpoints, "medium")) {
         text-align: center;
       }
+
+      .interests {
+        padding: 0 20px;
+      }
     }
   }
 }
