--- a/sass/styles.css
+++ b/sass/styles.css
@@ -20,12 +20,20 @@ body {
   background-color: whitesmoke;
   font: normal 16px/1.2 "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   padding: 2%; }
+  @media print {
+    body {
+      background-color: white;
+      font-size: 11pt;
+      padding: 0; } }
 
 h1 {
   color: #111111;
   font-size: 30px;
   font-weight: normal;
   margin: .2em 0; }
+  @media print {
+    h1 {
+      font-size: 24pt; } }
 
 h2 {
   color: #111111;
@@ -35,6 +43,9 @@ h2 {
   @media screen and (max-width: 425px) {
     h2 {
       font-size: 18px; } }
+  @media print {
+    h2 {
+      font-size: 15pt; } }
 
 h3 {
   color: #111111;
@@ -44,12 +55,18 @@ h3 {
   @media screen and (max-width: 425px) {
     h3 {
       font-size: 14px; } }
+  @media print {
+    h3 {
+      font-size: 12pt; } }
 
 .title {
   font-size: 28px; }
   @media screen and (max-width: 425px) {
     .title {
       font-size: 24px; } }
+  @media print {
+    .title {
+      font-size: 19pt; } }
 
 ul {
   margin-block-start: 1em;
@@ -110,6 +127,9 @@ a {
     @media screen and (max-width: 425px) {
       a.button {
         padding: .7em 2em; } }
+    @media print {
+      a.button {
+        display: none; } }
     a.button:hover {
       transform: scale(1.05);
       text-decoration: none; }
@@ -143,6 +163,9 @@ p {
     transition: .3s;
     background: whitesmoke;
     border-radius: 2px; }
+    @media print {
+      .toggle span {
+        background: white; } }
     .toggle span:first-of-type {
       top: 25%;
       bottom: 25%;
@@ -215,8 +238,14 @@ section {
   margin: 20px 0;
   cursor: pointer;
   transition: background-color .3s ease; }
+  @media print {
+    #work .job {
+      color: white; } }
   #work .job h1, #work .job h2, #work .job h3, #work .job li, #work .job a {
     color: whitesmoke; }
+    @media print {
+      #work .job h1, #work .job h2, #work .job h3, #work .job li, #work .job a {
+        color: white; } }
   #work .job .job-wrap {
     position: relative; }
     @media screen and (max-width: 425px) {
@@ -241,6 +270,10 @@ section {
       @media screen and (max-width: 425px) {
         #work .job .job-wrap .pts {
           margin-left: 0; } }
+      @media print {
+        #work .job .job-wrap .pts {
+          display: block !important;
+          height: auto !important; } }
       #work .job .job-wrap .pts h3 {
         padding-top: 1em;
         text-transform: uppercase;
@@ -252,6 +285,12 @@ section {
   #work .job:hover {
     background-color: #056288; }
 
+/**
+ * Experience section styles
+ */
+@media print {
+  #experience {
+    margin-bottom: 0; } }
 #experience .section-title {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
@@ -281,6 +320,9 @@ section {
     transition: background-color .3s ease; }
     #experience .grid .experience h1, #experience .grid .experience h2, #experience .grid .experience h3, #experience .grid .experience li, #experience .grid .experience a {
       color: whitesmoke; }
+      @media print {
+        #experience .grid .experience h1, #experience .grid .experience h2, #experience .grid .experience h3, #experience .grid .experience li, #experience .grid .experience a {
+          color: white; } }
     #experience .grid .experience .main {
       -webkit-align-items: flex-start;
       -ms-flex-align: flex-start;
@@ -302,6 +344,13 @@ section {
       margin: 0;
       margin-left: 10px;
       line-height: 1.6em; }
+      @media print {
+        #experience .grid .experience ul {
+          display: block !important;
+          height: auto !important;
+          font-size: 10pt; } }
+      #experience .grid .experience ul li:first-of-type {
+        padding-top: 20px; }
     #experience .grid .experience.active {
       background-color: #056288; }
       #experience .grid .experience.active .main {
@@ -318,9 +367,15 @@ section {
       top: calc(100% + 20px);
       height: 100vh;
       background-color: whitesmoke; }
+      @media print {
+        #experience .grid .experience:not(.active) .main:after {
+          display: none; } }
     #experience .grid .experience:not(.active) ul {
       display: none; }
 
+/**
+ * References section styles
+ */
 #references .section-title {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
@@ -328,5 +383,18 @@ section {
   -webkit-align-items: flex-start;
   -ms-flex-align: flex-start;
   align-items: flex-start; }
+@media print {
+  #references {
+    display: none; } }
+
+/**
+ * Print sepcific styles
+ */
+@media print {
+  #work .job:nth-of-type(3) {
+    page-break-after: always; }
+
+  #contact {
+    display: none; } }
 
 /*# sourceMappingURL=styles.css.map */
