--- a/index.haml
+++ b/index.haml
@@ -72,11 +72,12 @@
           .pts
             %h3 Responsibilities
             %ul
-              %li Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 local and remote developers.
+              %li Leading a development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote front-end and Ruby developers.
               %li Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency.
               %li Coordinate with departments and business units on technology needs and solution.
               %li Building and managing our data pipeline for quality data collection and integrity.
               %li Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives.
+              %li Directing and advising DevOps and Engineering decisions to keep our properties running smoothly and efficiently.
             %h3 Projects
             %ul
               %li <strong>Custom Donations Platform</strong> - <span class="small-text">Led the vision and scope for a custom donations platform which allowed our existing users to very simply donate, setup recurring donation, and manage donation history and preferences. <a href="https://www.bethel.tv/give"  taget="_blank">[&nbsp;bethel.tv/give&nbsp;]</a></span>
@@ -156,6 +157,7 @@
             %li This experience allowed me to work with APIs, data modeling, and diverse platforms & integrations.
             %li I love solving problems and finding the most I can get out of the data and tools available.
             %li Building out customer management systems, and marketing workflows for over a million contacts.
+            %li Worked in many engineering development flows and project management methodologies.
         .experience
           .main.flex
             .toggle
@@ -191,7 +193,7 @@
             %li 12+ years of video filming and editing.
             %li Color correction experience with RAW, PRORES, and H.264 video.
             %li Steadicam, crane operation, drone piloting.
-            %li RAW video workflow with Blackmagic, Davinci Resolve, FCP, & Adobe Creative Suite.
+            %li Video workflow in Blackmagic, Davinci Resolve, FCP, & Adobe Suite.
             %li Motion Graphics animation with Adobe After Effects & Cinema4D.
             %li Phtography and Lightroom photo editing.
             %li Photoshop, Illustrator, InDesign for layout and logo design.
